# sgx-playground

./: .gitignore  sgx-rust-setup.sh
hello-sgx/: Cargo.toml
hello-sgx/.cargo/: config.toml
hello-sgx/src/: main.rs
